# DyeWarsProject

./: .gitignore  README.md
dyewars/: CLAUDE.md  DyeWars.slnx
dyewars/Assets/: UniversalRenderPipelineGlobalSettings.asset  UserChoices.choices
dyewars/Assets/Prefabs/: Player 1.prefab  Player.prefab
dyewars/Assets/SO/: SpatialChange.asset
dyewars/Assets/Scenes/: default.unity  newcode.unity
dyewars/Assets/Scripts/: AssemblyDef.asmdef  GridRenderer.cs  InputField (TMP).prefab  NetworkManager.cs  Other1.prefab  PlayerController.cs
dyewars/Assets/Scripts/Core/: EventBus.cs  GameEvents.cs  ServiceLocator.cs
dyewars/Assets/Scripts/Core/EventExamples/: EventBusSO.cs  OnSpatialChange.cs  TeasSubscribe.cs  TestScene.unity  Unity-PubSub-EventSystem.md
dyewars/Assets/Scripts/Core/Events/: TeasPublish.cs
dyewars/Assets/Scripts/Debug/: PacketDebugger.cs
dyewars/Assets/Scripts/Debug/DebugWindows/: EventBusDebugWindow.cs  EventBusDebugWindow2.cs  PacketDebugWindow.cs
dyewars/Assets/Scripts/Game/: DebugOverlay.cs  GameBootstrap.cs  GameManager.cs  GridService.cs
dyewars/Assets/Scripts/Input/: InputService.cs
dyewars/Assets/Scripts/Network/: INetworkService.cs  NetworkService.cs
dyewars/Assets/Scripts/Network/Connection/: NetworkConnection.cs
dyewars/Assets/Scripts/Network/Incoming/: PacketHandler.cs
dyewars/Assets/Scripts/Network/Outgoing/: PacketSender.cs
dyewars/Assets/Scripts/Network/Protocol/: PacketHeader.cs  PacketOpcodes.cs  PacketReader.cs  PacketWriter.cs
dyewars/Assets/Scripts/Player/: LocalPlayerController.cs  PlayerData.cs  PlayerRegistry.cs  PlayerView.cs  PlayerViewFactory.cs
dyewars/Assets/Scripts/UI/: ConnectionDialogUI.cs
dyewars/Assets/Settings/Build Profiles/: Windows.asset
dyewars/Assets/Tests/EditMode/: EditModeTests.asmdef  OpcodeTests.cs  PacketHandlerTests.cs  PacketReaderTests.cs  PacketWriterTests.cs  PlayerDataTests.cs  PlayerRegistryTests.cs  ServiceLocatorTests.cs
dyewars/Assets/Tests/PlayMode/: GridServicePlayTests.cs  PlayModeTests.asmdef  PlayerRegistryPlayTests.cs
dyewars/Assets/_Recovery/: 0.unity
dyewars/Assets/code/: GridRenderer.cs  NetworkManager.cs  OtherPlayer.prefab  Player.prefab  Triangle.prefab
dyewars/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  ProjectSettings.asset  TagManager.asset
dyewars_server/: CLAUDE.md  CMakeLists.txt  THREADING.md
dyewars_server/data/: gameDB.sqlite-shm  gameDB.sqlite-wal
dyewars_server/game_scripts/: main.lua
dyewars_server/include/lua/: LuaEngine.h
dyewars_server/include/server/: BandwithMonitor.h  ClientConnection.h  Common.h  GameServer.h  GameSession.h  Player.h
dyewars_server/include/server/Packets/: OpCodes.h
dyewars_server/scripts/: items.lua  main.lua  spells.lua
dyewars_server/src/: main.cpp
dyewars_server/src/core/: Common.h  Log.h  ThreadSafety.h
dyewars_server/src/database/: DatabaseManager.cpp  DatabaseManager.h
dyewars_server/src/debug/: DebugHttpServer.cpp  DebugHttpServer.h  PERFORMANCE_OPTIMIZATIONS.md  ServerStats.h
dyewars_server/src/game/: Actions.cpp  Actions.h  GameMap.cpp  GameMap.h  Player.cpp  Player.h  PlayerRegistry.cpp  PlayerRegistry.h  SpatialHash.h  TileMap.h  Tilemap.cpp  VisibilityTracker.h  World.cpp  World.h
dyewars_server/src/game/actions/: Actions.cpp  Actions.h  BotStressTest.cpp  BotStressTest.h  MoveActions.cpp
dyewars_server/src/game/handlers/: MoveHandler.cpp  MoveHandler.h
dyewars_server/src/lua/: LuaEngine.cpp  LuaEngine.h
dyewars_server/src/network/: BandwidthMonitor.h  ConnectionLimiter.cpp  ConnectionLimiter.h
dyewars_server/src/network/packets/: OpCodes.h  Protocol.h  Sender.h  UnusedOpCodes.h
dyewars_server/src/network/packets/incoming/: PacketHandler.cpp  PacketHandler.h
dyewars_server/src/network/packets/outgoing/: PacketSender.h
dyewars_server/src/server/: ClientConnection.cpp  ClientConnection.h  ClientManager.cpp  ClientManager.h  FakeClientConnection.h  GameMap.cpp  GameServer.cpp  GameServer.h  GameSession.cpp  IClientConnection.h  Player.cpp
dyewars_server/tests/: README.md  test_cleanup.cpp
summary_of_progress/: CLIENT_ARCHITECTURE.md  DYEWARS_DOCUMENTATION.md  DyeWars_Insights.md  SERVER_ARCHITECTURE.md  animation_session_summary.md  facing_feature_summary.md  implementation_guide.md  multiplayer_networking_guide.md  session_summary.md
